@@ -1,5 +1,8 @@
 package URI::mssql;
-use base 'URI::sqlserver';
+use base 'URI::_odbc';
 our $VERSION = '0.16';
+
+sub default_port { 1433 }
+sub canonical_engine { 'mssql' }
 
 1;
