@@ -1,10 +1,5 @@
 package URI::sqlserver;
-use base 'URI::_db';
+use base 'URI::mssql';
 our $VERSION = '0.16';
-
-sub default_port { 1433 }
-# http://www.perlmonks.org/index.pl?node_id=669089
-sub dbi_driver   { 'Sybase' }
-sub canonical_engine { 'sqlserver' }
 
 1;
