@@ -211,15 +211,45 @@ for my $spec (
         qry => [],
     },
     {
-        uri => 'db:sqlserver://localhost:33/foo',
-        dsn => 'dbi:Sybase:host=localhost;port=33;dbname=foo',
-        dbi => [ [host => 'localhost'], [port => 33], [dbname => 'foo'] ],
+        uri => 'db:mssql:',
+        dsn => 'dbi:ODBC:',
+        dbi => [ [DSN => undef] ],
         qry => [],
     },
     {
+        uri => 'db:mssql:dbadmin',
+        dsn => 'dbi:ODBC:DSN=dbadmin',
+        dbi => [ [DSN => 'dbadmin'] ],
+        qry => [],
+    },
+    {
+        uri => 'db:mssql://localhost',
+        dsn => 'dbi:ODBC:Server=localhost;Port=1433',
+        dbi => [ [Server => 'localhost'], [Port => 1433], [Database => undef] ],
+        qry => [],
+    },
+    {
+        uri => 'db:mssql://localhost:33',
+        dsn => 'dbi:ODBC:Server=localhost;Port=33',
+        dbi => [ [Server => 'localhost'], [Port => 33], [Database => undef] ],
+        qry => [],
+    },
+    {
+        uri => 'db:mssql://foo:123/try?foo=1&foo=2&lol=yes&Driver=HPMssql',
+        dsn => 'dbi:ODBC:Server=foo;Port=123;Database=try;foo=1;foo=2;lol=yes;Driver=HPMssql',
+        dbi => [ [Server => 'foo'], [Port => 123], [Database => 'try'] ],
+        qry => [ foo => 1, foo => 2, lol => 'yes', Driver => 'HPMssql' ],
+    },
+    {
         uri => 'db:mssql://localhost:33/foo',
-        dsn => 'dbi:Sybase:host=localhost;port=33;dbname=foo',
-        dbi => [ [host => 'localhost'], [port => 33], [dbname => 'foo'] ],
+        dsn => 'dbi:ODBC:Server=localhost;Port=33;Database=foo',
+        dbi => [ [Server => 'localhost'], [Port => 33], [Database => 'foo'] ],
+        qry => [],
+    },
+    {
+        uri => 'db:sqlserver://localhost:33/foo',
+        dsn => 'dbi:ODBC:Server=localhost;Port=33;Database=foo',
+        dbi => [ [Server => 'localhost'], [Port => 33], [Database => 'foo'] ],
         qry => [],
     },
     {
